use simpler template, fix two-column tables

--- a/_extensions/iccr/_extension.yml
+++ b/_extensions/iccr/_extension.yml
@@ -8,10 +8,13 @@ contributes:
       format-resources:
         - iccr2024.sty
       include-in-header:
-        - preamble.tex
+        - text: "\\usepackage{iccr2024}"
+        - file: "_two-column-longtable.tex"
+      template: "simple.tex"
       template-partials:
         - "partials/doc-class.tex"
         - "partials/_affiliations.tex"
         - "partials/before-title.tex"
         - "partials/title.tex"
         - "partials/before-body.tex"
+      cite-method: biblatex
